@@ -1,5 +1,8 @@
 2005-06-01  Juanma Barranquero  <lekktu@gmail.com>
 
+	* emacs-lisp/cl-macs.el (defsetf):
+	Improve argument/docstring consistency.
+
 	* faces.el (list-faces-display): Improve the formatting by
 	computing the maximum length required for any face-name (reworked
 	patch of 1999-01-11, accidentally deleted on 1999-07-21).
